--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -15,6 +15,7 @@ Here you will find a listing of lesson materials for the course such as slides, 
 <!-- ![](../graphics/levelup.png){width=10%} -->
 
 ## 1. Welcome Weeks
+
 - **Getting to Know You**: [Welcome Week Survey](https://forms.gle/EobK4xncr4f63Z8WA)
 - **Getting to know your neighbor** Pair-up with **two** people in the class to ask the following questions. Write down their answers -- you will be introducing them during next class! 
   -  What is your name?
@@ -29,5 +30,15 @@ Here you will find a listing of lesson materials for the course such as slides, 
 - Also, be sure that you are in the Discord channel for the course. If you are not in the Discord channel, please let me know!
 - **Activity 01**: Installing Essential Tools and Solving the Maze
   - [GitHub Classroom Link](https://classroom.github.com/a/WIB5VCnJ)
+- Installing necessary software for the course (if anyone needs help!) 
+  - [Python](https://www.python.org/)
+  - [Visual Studio Code](https://code.visualstudio.com/download) 
+  - [GitHub](https://github.com/git-guides/install-git)
+  - [Pipx](https://pipx.pypa.io/stable/installation/)
+
+- ## 2. Reviewing Python
+
+- **Literals, Variables, Conditionals, Strings, etc. ** 
+  - [HTML](2_i_introToPython_solutions.html) Slides
 
 ---
