update token link

--- a/syllabus/syllabus.qmd
+++ b/syllabus/syllabus.qmd
@@ -13,7 +13,7 @@ author: "Oliver Bonham-Carter"
 **Instructor Office Hours**: Visit the below URL to find availability and schedule and appointment.
 [https://www.oliverbonhamcarter.com/contactandabout/](https://www.oliverbonhamcarter.com/contactandabout/)
 
-**Book An Appointment!**: [https://calendar.app.google/dEK6MftNGNLV1Ft96](https://calendar.app.google/dEK6MftNGNLV1Ft96)
+**Book An Appointment!**: [https://www.oliverbonhamcarter.com/contactandabout/](https://www.oliverbonhamcarter.com/contactandabout/)
 
 *Note*: If the office hours times are not convenient, then please reach out to me and we can find an alternative time to meet.
  
@@ -21,7 +21,7 @@ author: "Oliver Bonham-Carter"
 
 ## Quick Links
 
-+ [Token Form for Automatic Extension](https://forms.gle/hjrJLnpHrauFmJqH8)
++ [Token Form for Automatic Extension](https://docs.google.com/forms/d/e/1FAIpQLSdPLsKNw7rXTECajC6TqLhdLtUppAXRdiWFVKmyYRAjtHcOgg/viewform?usp=dialog)
 
 ## Course Description
 
