--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -41,5 +41,7 @@ Here you will find a listing of lesson materials for the course such as slides, 
 
 - **Literals, Variables, Conditionals, Strings, etc. ** 
   - [HTML](2_i_introToPython_solutions.html) Slides
+- **Loops, Dictionaries and Lists ** 
+  - [HTML](3_ii_introToPython_solutions.html) Slides
 
 ---
