--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -43,5 +43,7 @@ Here you will find a listing of lesson materials for the course such as slides, 
   - [HTML](2_i_introToPython_solutions.html) Slides
 - **Loops, Dictionaries and Lists ** 
   - [HTML](3_ii_introToPython_solutions.html) Slides
+- **Lab01**: Mastering Python Loops
+  - [GitHub Classroom Link](https://classroom.github.com/a/AnsmidnZ)
 
 ---
