--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -41,13 +41,11 @@ Here you will find a listing of lesson materials for the course such as slides, 
 
 - **Literals, Variables, Conditionals, Strings, etc. ** 
   - [HTML](2_i_introToPython_solutions.html) Slides
-- **Loops, Dictionaries and Lists ** 
-  - [HTML](3_ii_introToPython_solutions.html) Slides
+<!-- - **Loops, Dictionaries and Lists ** 
+  - [HTML](3_ii_introToPython_solutions.html) Slides -->
 - **Lab01**: Mastering Python Loops
   - [GitHub Classroom Link](https://classroom.github.com/a/AnsmidnZ)
-
-## W3. List, Dictionaries and Sets (Oh My!)
-- **Lists, Dictionary and Sets**
+- **List, Dictionaries and Sets (Oh My!)**
   - [HTML](4_data_structures_solutions.html) Slides
   
 ---
