--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -43,7 +43,7 @@ Here you will find a listing of lesson materials for the course such as slides, 
   - [HTML](2_i_introToPython_solutions.html) Slides
 <!-- - **Loops, Dictionaries and Lists ** 
   - [HTML](3_ii_introToPython_solutions.html) Slides -->
-- **Lab01**: Mastering Python Loops
+- **Lab 01**: Mastering Python Loops
   - [GitHub Classroom Link](https://classroom.github.com/a/AnsmidnZ)
 
 ## W3. More on Python
@@ -52,5 +52,7 @@ Here you will find a listing of lesson materials for the course such as slides, 
   - [HTML](4_data_structures_solutions.html) Slides
 - **Activity 02**: Getting Started with UV Package Manager
   - [GitHub Classroom Link](https://classroom.github.com/a/8rO34Wu8)
+- **Lab 02**: Mastering Python Data Structures
+  - [GitHub Classroom Link](https://classroom.github.com/a/fheOnxRv)
 
 ---
