--- a/materials/0_materials.qmd
+++ b/materials/0_materials.qmd
@@ -54,7 +54,8 @@ Here you will find a listing of lesson materials for the course such as slides, 
   - [GitHub Classroom Link](https://classroom.github.com/a/8rO34Wu8)
 - **Lab 02**: Mastering Python Data Structures
   - [GitHub Classroom Link](https://classroom.github.com/a/fheOnxRv)
-
+- **Activity 03**: Data Cleaning and Advanced Plotting
+  - [GitHub Classroom Link](https://classroom.github.com/a/Jg-nptBV)
 ## W4. Numerical Programming
 
 - **Numerical Programs**
